<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Where2Eat</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="login_username_hint">请输入用户名&#8230;</string>
    <string name="login_password_hint">请输入密码&#8230;</string>
    <string name="login_repassword_hint">请确认密码&#8230;</string>
    <string name="login_email_hint">请输入邮箱&#8230;</string>
    <string name="toast_error_password_null">密码不能为空</string>
    <string name="toast_error_username_null">用户名不能为空</string>
    <string name="toast_error_email_null">邮箱不能为空</string>
    <string name="toast_error_comfirm_password">输入的两次密码不一致</string>
    <string name="network_tips">当前网络不可用,请检查您的网络!</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_txt1">还没有账号？</string>
    <string name="register_txt2">立即注册 ></string>
    <string name="login_account">账号 </string>
    <string name="login_pwd">密码 </string>
    <string name="login_rpwd">确认密码 </string>
    <string name="login_email">邮箱</string>
    <string name="restaurant_name">小厨小菜</string>
    <string name="restaurant_type">川菜</string>
    <string name="self_nickname">熊爸爸</string>
    <string name="self_address">我的送餐地址</string>
    <string name="self_vouchers">我的代金券</string>
    <string name="self_refund">我的钱包</string>
    <string name="self_collection">我的收藏</string>
    <string name="self_comment">我的评论</string>
    <string name="service_tel">800-820-8820</string>
    <string name="price">￥80/人</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_regist">RegistActivity</string>
    <string name="title_activity_self">SelfActivity</string>
    <string name="title_activity_main">MainActivity</string>
    
</resources>
