<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_color"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/theme_color"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="DisableBaselineAlignment" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginLeft="50dp"
            android:layout_weight="1"
            android:background="@color/theme_color"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/self_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/default_head_icon"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/self_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:gravity="center"
                android:text="@string/self_nickname"
                android:textColor="#fff"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:background="@color/theme_color"
            android:gravity="top"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/self_set"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/set"
                tools:ignore="ContentDescription" />

        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f6f6f6" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f6f6f6"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/self_address"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#fff"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/icon_location"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/self_address"
                    android:textColor="#656565"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/right_arrow"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_gravity="center"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="#c8c8c8" />

            <LinearLayout
                android:id="@+id/self_vouchers"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#fff"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/icon_vouchers"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/self_vouchers"
                    android:textColor="#656565"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/right_arrow"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_gravity="center"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="#c8c8c8" />

            <LinearLayout
                android:id="@+id/self_refund"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#fff"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/icon_refund" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/self_refund"
                    android:textColor="#656565"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/right_arrow" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:background="#f6f6f6" />

            <LinearLayout
                android:id="@+id/self_collection"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#fff"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/icon_collection" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/self_collection"
                    android:textColor="#656565"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/right_arrow" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_gravity="center"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="#c8c8c8" />

            <LinearLayout
                android:id="@+id/self_comment"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#fff"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/icon_comment" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/self_comment"
                    android:textColor="#656565"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/right_arrow" />
            </LinearLayout>

            
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:background="#f6f6f6" />          

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_gravity="center"
                android:background="#fff"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableLeft="@drawable/icon_tel"
                    android:drawablePadding="20dp"
                    android:gravity="center"
                    android:text="@string/service_tel"
                    android:textColor="@color/theme_color"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>